Start work on the worldedit page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -397,7 +397,7 @@ p {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 11.5px;
 }
 figure {
   margin-left: 0;
