--- a/builds/src/layout.css
+++ b/builds/src/layout.css
@@ -525,10 +525,10 @@ li > p {
     margin-bottom: calc(1.45rem / 2);
 }
 code {
-    padding: 2px 4px;
     font-size: 90%;
-    color: #c7254e;
-    background-color: #f9f2f4;
+    color: rgb(199, 37, 78);
+    background-color: rgb(249, 242, 244);
+    padding: 2px 4px;
     border-radius: 4px;
 }
 kbd {
