--- a/paste/src/layout.css
+++ b/paste/src/layout.css
@@ -1,6 +1,11 @@
+html, #__next {
+    height: 100%;
+}
+
 body {
     margin: 0;
     font-size: 14px;
     height: 100%;
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
