chore: use css modules for some simpler styles

--- a/shared/src/components/WarningBox.module.css
+++ b/shared/src/components/WarningBox.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const WarningBox = styled.div`
+.WarningBox {
     background-color: #fcf8e3;
     color: #8a6d3b;
 
@@ -8,4 +6,4 @@ export const WarningBox = styled.div`
     margin-bottom: 23px;
     border: 1px solid #faebcc;
     border-radius: 4px;
-`;
+}
