--- a/shared/src/components/sidebar/SidebarDivider.module.css
+++ b/shared/src/components/sidebar/SidebarDivider.module.css
@@ -1,10 +1,8 @@
-import { styled } from 'styled-components';
-
-export const SidebarDivider = styled.hr`
+.SidebarDivider {
     margin-top: 23px;
     margin-bottom: 23px;
     border: 0;
     border-top: 1px solid #eee;
     height: 0;
     box-sizing: content-box;
-`;
+}
