--- a/shared/src/components/grid/Row.module.css
+++ b/shared/src/components/grid/Row.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const Row = styled.div`
+.Row {
     display: flex;
     flex-direction: row;
     margin-top: 30px;
@@ -8,4 +6,4 @@ export const Row = styled.div`
     @media screen and (max-width: 700px) {
         flex-direction: column;
     }
-`;
+}
