--- a/shared/src/components/sidebar/SidebarNav.module.css
+++ b/shared/src/components/sidebar/SidebarNav.module.css
@@ -1,13 +1,11 @@
-import { styled } from 'styled-components';
-
-export const SidebarNavList = styled.ul`
+.SidebarNavList {
     margin-bottom: 0;
     margin-left: 0;
     padding-left: 0;
     list-style: none;
-`;
+}
 
-export const SidebarNavListItem = styled.li`
+.SidebarNavListItem {
     float: none;
     position: relative;
     display: block;
@@ -15,4 +13,4 @@ export const SidebarNavListItem = styled.li`
     line-height: 1.7;
     margin-bottom: 0;
     margin-top: 2px;
-`;
+}
