chore: continue migration to css modules

--- a/paste/src/Gutter.module.css
+++ b/paste/src/Gutter.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const Gutter = styled.div`
+.Gutter {
     padding: 15px;
     float: left;
     text-align: right;
@@ -8,4 +6,4 @@ export const Gutter = styled.div`
     display: flex;
     line-height: 130%;
     white-space: pre;
-`;
+}
