--- a/shared/src/components/Container.module.css
+++ b/shared/src/components/Container.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const Container = styled.div`
+.Container {
     padding: 0 15px;
     margin: 0 auto;
     width: 100%;
@@ -13,8 +11,8 @@ export const Container = styled.div`
     @media (min-width: 1200px) {
         width: 1030px;
     }
-`;
+}
 
-export const ContainerPadded = styled(Container)`
+.ContainerPadded {
     margin-top: 20px;
-`;
+}
