--- a/builds/src/layout.global.css
+++ b/builds/src/layout.global.css
@@ -580,7 +580,12 @@ tt,
 code {
     background-color: hsla(0, 0%, 0%, 0.04);
     border-radius: 3px;
-    font-family: Menlo, Monaco, Consolas, courier new, monospace;
+    font-family:
+        Menlo,
+        Monaco,
+        Consolas,
+        courier new,
+        monospace;
     padding: 0;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
