--- a/golf/src/layout.global.css
+++ b/golf/src/layout.global.css
@@ -1,40 +1,3 @@
-/* open-sans-regular - latin */
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: url('/fonts/open-sans-v16-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local('Open Sans Regular'), local('OpenSans-Regular'),
-        url('/fonts/open-sans-v16-latin-regular.eot?#iefix')
-            format('embedded-opentype'),
-        /* IE6-IE8 */ url('/fonts/open-sans-v16-latin-regular.woff2')
-            format('woff2'),
-        /* Super Modern Browsers */
-            url('/fonts/open-sans-v16-latin-regular.woff') format('woff'),
-        /* Modern Browsers */ url('/fonts/open-sans-v16-latin-regular.ttf')
-            format('truetype'),
-        /* Safari, Android, iOS */
-            url('/fonts/open-sans-v16-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-/* open-sans-600 - latin */
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 600;
-    src: url('/fonts/open-sans-v16-latin-600.eot'); /* IE9 Compat Modes */
-    src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
-        url('/fonts/open-sans-v16-latin-600.eot?#iefix')
-            format('embedded-opentype'),
-        /* IE6-IE8 */ url('/fonts/open-sans-v16-latin-600.woff2')
-            format('woff2'),
-        /* Super Modern Browsers */ url('/fonts/open-sans-v16-latin-600.woff')
-            format('woff'),
-        /* Modern Browsers */ url('/fonts/open-sans-v16-latin-600.ttf')
-            format('truetype'),
-        /* Safari, Android, iOS */
-            url('/fonts/open-sans-v16-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-
 html {
     font-family: 'Open Sans', Arial, sans-serif;
     -ms-text-size-adjust: 100%;
@@ -562,10 +525,10 @@ li > p {
     margin-bottom: calc(1.45rem / 2);
 }
 code {
-    padding: 2px 4px;
     font-size: 90%;
-    color: #c7254e;
-    background-color: #f9f2f4;
+    color: rgb(199, 37, 78);
+    background-color: rgb(249, 242, 244);
+    padding: 2px 4px;
     border-radius: 4px;
 }
 kbd {
@@ -617,7 +580,12 @@ tt,
 code {
     background-color: hsla(0, 0%, 0%, 0.04);
     border-radius: 3px;
-    font-family: Menlo, Monaco, Consolas, courier new, monospace;
+    font-family:
+        Menlo,
+        Monaco,
+        Consolas,
+        courier new,
+        monospace;
     padding: 0;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
