--- a/paste/src/views/ProfileComponent.module.css
+++ b/paste/src/views/ProfileComponent.module.css
@@ -36,3 +36,24 @@
     height: 12px;
     background: #0059d1;
 }
+
+.ProfileNodeText {
+    padding-left: 20px;
+    cursor: pointer;
+    padding-top: 2px;
+    padding-bottom: 2px;
+
+    &:hover {
+        background-color: #ccc;
+    }
+
+    &:hover + div {
+        background: #efefef;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+        border-radius: 3px;
+    }
+
+    &:hover :global(.time) {
+        display: inline;
+    }
+}
