--- a/shared/src/components/Breadcrumbs.module.css
+++ b/shared/src/components/Breadcrumbs.module.css
@@ -1,14 +1,12 @@
-import { styled } from 'styled-components';
-
-export const Breadcrumb = styled.li`
+.Breadcrumb {
     display: inline-block;
-`;
+}
 
-export const ActiveBreadcrumb = styled(Breadcrumb)`
+.ActiveBreadcrumb {
     color: rgb(119, 119, 119);
-`;
+}
 
-export const BreadcrumbWrapper = styled.ol`
+.BreadcrumbWrapper {
     margin-bottom: 23px;
     margin-left: 0;
     background-color: rgb(245, 245, 245);
@@ -21,4 +19,4 @@ export const BreadcrumbWrapper = styled.ol`
         color: rgb(204, 204, 204);
         padding: 0px 5px;
     }
-`;
+}
