--- a/shared/src/components/InfoBox.module.css
+++ b/shared/src/components/InfoBox.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const InfoBox = styled.div`
+.InfoBox {
     background-color: rgb(217, 237, 247);
     color: rgb(49, 112, 143);
 
@@ -8,12 +6,4 @@ export const InfoBox = styled.div`
     margin-bottom: 23px;
     border: 1px solid rgb(188, 232, 241);
     border-radius: 4px;
-
-    strong {
-        font-weight: 700;
-    }
-
-    p + p {
-        margin-top: 5px;
-    }
-`;
+}
