--- a/shared/src/components/HorizontalNav.module.css
+++ b/shared/src/components/HorizontalNav.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const HorizontalNav = styled.ul`
+.HorizontalNav {
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -11,18 +9,18 @@ export const HorizontalNav = styled.ul`
     overflow-x: auto;
     margin-bottom: 1rem;
 
-    .hideSmall {
+    &:global(.hideSmall) {
         display: none;
     }
 
     @media (min-width: 768px) {
-        .hideSmall {
+        &:global(.hideSmall) {
             display: unset;
         }
     }
-`;
+}
 
-export const HorizontalNavItem = styled.li`
+.HorizontalNavItem {
     margin: 0 0.5rem;
     text-align: center;
-`;
+}
