--- a/shared/src/components/Jumbotron.module.css
+++ b/shared/src/components/Jumbotron.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const JumbotronContainer = styled.div`
+.JumbotronContainer {
     padding: 20px;
     padding-bottom: 0;
 
@@ -12,26 +10,26 @@ export const JumbotronContainer = styled.div`
 
     max-width: 700px;
     margin: 0 auto;
-`;
+}
 
-export const JumbotronImageBox = styled.div`
+.JumbotronImageBox {
     margin: 2rem auto;
     max-width: 400px;
-`;
+}
 
-export const JumbotronText = styled.h2`
+.JumbotronText {
     margin: 20px 0;
     font-size: 21px;
     font-weight: 200;
     line-height: 1.7;
     text-align: center;
-`;
+}
 
-export const JumbotronButtonBox = styled.div`
+.JumbotronButtonBox {
     display: flex;
     justify-content: center;
 
-    a {
+    & a {
         margin: 1rem 0.5rem;
     }
-`;
+}
