--- a/shared/src/components/Table.module.css
+++ b/shared/src/components/Table.module.css
@@ -1,6 +1,4 @@
-import { styled } from 'styled-components';
-
-export const Table = styled.table`
+.Table {
     width: 100%;
     max-width: 100%;
     margin-bottom: 23px;
@@ -13,41 +11,41 @@ export const Table = styled.table`
     color: rgb(51, 51, 51);
     word-break: break-word;
 
-    tbody {
-        tr {
-            th,
-            td {
+    & tbody {
+        & tr {
+            & th,
+            & td {
                 line-height: 1.7;
                 vertical-align: top;
                 padding: 8px;
             }
         }
 
-        tr:nth-of-type(2n + 1) {
-            th,
-            td {
+        & tr:nth-of-type(2n + 1) {
+            & th,
+            & td {
                 background-color: rgb(249, 249, 249);
             }
         }
 
-        tr.danger {
-            th,
-            td {
+        & tr:global(.danger) {
+            & th,
+            & td {
                 background-color: #f2dede;
             }
         }
     }
-`;
+}
 
-export const BorderedTable = styled(Table)`
-    tbody {
-        tr {
-            th,
-            td {
+.BorderedTable {
+    & tbody {
+        & tr {
+            & th,
+            & td {
                 border-width: 1px;
                 border-style: solid;
                 border-color: rgb(221, 221, 221);
             }
         }
     }
-`;
+}
