--- a/shared/src/components/Sponsors.module.css
+++ b/shared/src/components/Sponsors.module.css
@@ -15,7 +15,7 @@
     align-items: center;
 }
 
-.HorizontalSponsorArea = {
+.HorizontalSponsorArea {
     display: flex;
     align-items: center;
 
